+  add russian translation thanks to https://github.com/andoleal
+  add turkish translation thanks to https://steamcommunity.com/profiles/76561198045705212/
+  add italian translation thanks to https://github.com/Strappazzon
-  fix changelog being cutoff in update notification window
-  fix updater on linux
-  fix handling unicode languages
-  minor typos in english translation
-  fix cutoff strings
-  fix crash when available disc space is below threshold

v007:
-  fixed main window becoming malfunctional when pressing download in the queue window with an empty queue
-  retranslate main window when changing language
+  load english string as fallback when the current localization doesnt contain the wanted string
+  added sorting and removal of entrys to the queue management
+  improved select window
+  every run now has its own logfile
-  prevent the same update being added to queue multiple times
-  fix crashes in queue management
+  check if download directory is writeable
+  added percentage and download speed to main window when downloading
+  log crashes for easier debugging
-  fix crash when downloading on python 3.8
+  use enter key to search for updates in main window

v006:
+! automatic download and installation of updates
+  progress bar for downloads
+  added simple download queue
-  improved responsiveness of the window while downloading
-  fix downloading of game updates for certain games with " or ' in their names

v005:
+  add notification for new releases
+  add translation support (english & german sofar)

v004:
-  improved file size formatting
+  added check for free space before download
-  improved naming of outputted directories
-  fixed a crash when selecting no update in the download window
+  added configuration via gui

v003:
+  added logging
+! added GUI via pysimplegui

v002:
-  fixed sha1 verification of downloads
+  sort downloads into folders by gameid
+  added check if file was already downloaded

v001:
   initial release