@@ -47,6 +47,8 @@ class PS3GUD():
         self.configDefaults["proxy_port"] = ""
         self.configDefaults["proxy_user"] = ""
         self.configDefaults["proxy_pass"] = None
+        self.configDefaults["dont_show_again_hotfix_keyring"] = False
+        self.configDefaults["dont_show_again_keyring_support"] = False
         
     def setWindow(self, window):
         self.logger.window = window
@@ -57,11 +59,12 @@ class PS3GUD():
     def logHeader(self, version, psgversion):
         self.logger.log("PS3GameUpdateDownloader "+version)
         self.logger.log("Config File: "+self.configFile)
-        self.logger.log("Language: "+ self.loc.getLoc()+"\n\n")
+        self.logger.log("Language: "+ self.loc.getLoc())
         self.logger.log("Current working directory: "+os.getcwd())
         self.logger.log("Compiled: "+str(utils.isAppFrozen()))
         self.logger.log("PySimpleGUI version: "+psgversion)
         self.logger.log("Python version: "+sys.version)
+        self.logger.log("\n")
         
     def loadConfig(self):
         if os.path.exists(self.configFile) and os.path.isfile(self.configFile):
@@ -69,7 +72,10 @@ class PS3GUD():
             with open(self.configFile, "r", encoding="utf8") as f:
                 self.config = json.loads(f.read())
             self.useDefaultConfig = False
-            self.config["proxy_pass"] = self.getProxyPass()
+            if self.config["use_proxy"] == True:
+                self.config["proxy_pass"] = self.getProxyPass()
+            else:
+                self.config["proxy_pass"] = None
             self.setupProxy()
         else:
             self.logger.log(self.loc.getKey("msg_noConfigFile"))
@@ -77,10 +83,13 @@ class PS3GUD():
             
     def setConfig(self, config):
         self.config = config
+        self.saveConfig()
+        
+    def saveConfig(self):
         with open(self.configFile, "w", encoding="utf8") as f:
             f.write(json.dumps(self.config, sort_keys=True, indent=4))
         self.logger.log(self.loc.getKey("msg_configFileSaved"))
-        self.useDefaultConfig = False
+        self.useDefaultConfig = False 
         
     def setProxyPass(self, pwd):
         keyring.set_password("ps3gud", "proxy_pass", pwd)
@@ -103,6 +112,7 @@ class PS3GUD():
             self.proxies["https"] += self.getConfig("proxy_ip")+":"+self.getConfig("proxy_port")
         else:
             self.proxies = {}
+            
     def getConfig(self, key):
         try:
             return self.config[key]
